# nova

./: .dockerignore  .env.example  .env.local-render.example  .gbrainignore  .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  Dockerfile  LICENSES.md  Makefile  Procfile  README.md  TASKS.md  TODOS.md  VERSION  dev.sh  docker-compose.langfuse.yml  docker-compose.local-render.yml  docker-compose.yml  fly.toml  openclaw.config.json  package-lock.json  package.json  setup-cofounder.sh  skills-lock.json
src/apps/api/: .gitignore  .venv  Dockerfile  Dockerfile.worker  OBSERVABILITY.md  pyproject.toml
src/apps/api/app/: auth.py  config.py  database.py  main.py  models.py  storage.py  worker.py
src/apps/api/nova_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/apps/api/prompts/: align_overlay_to_transcript.txt  analyze_audio_template.txt  analyze_clip.txt  analyze_clip_photo.txt  analyze_template_pass1.txt  analyze_template_pass2.txt  analyze_template_schema.txt  analyze_template_single.txt  analyze_tiktok_profile.txt  classify_overlay.txt  classify_song.txt  conformance_feedback.txt  content_ideas.json  derive_user_style.txt  edit_copilot.txt  extract_template_text.txt  generate_content_plan.txt  generate_persona.txt  idea_expander.txt  identify_song_sections.txt  image_metadata.txt  interviewer.txt  match_clip_plan.txt  match_music.txt  match_overlay_format.txt  observe_video_style.txt  overlay_examples.json  overlay_placement.txt  persona_archetypes.json  photo_pacing.txt  plan_item_advisor.txt  product_questions.md  retake_detector.txt  scene_matcher.txt  select_agentic_style.txt  select_lyric_style.txt  sequence_emphasis.txt  sequence_quote.txt  sfx_placement.txt  smart_edit_planner.txt  (+7 more)
src/apps/api/scripts/: add_waka_waka_intro_overlays.py  aggregate_phase_timings.py  analyze_brazil_animation.py  analyze_scene_glitches.py  analyze_text_overlays.py  analyze_waka_waka_diff.py  audit_reanalyze_timings.py  backfill_dimples_passport_inputs.py  backfill_song_classifier.py  backfill_song_sections.py  backfill_template_posters.py  backfill_that_one_trip_to.py  backfill_track_config_from_sections.py  backfill_waka_waka_location.py  build_eval_dashboard.py  build_text_ground_truth.py  check_layer2_cache_bump.sh  debug_layer2.py  diff_lyric_sync.py  dump_cluster_fixtures.py  export_clip_metadata_fixtures.py  export_eval_fixtures.py  generate_font_embeddings.py  generate_styled_font_previews.py  ingest_youtube_playlist.py  inspect_eval_fixtures.py  migrate_whisper_only_rows.py  narrated_local_render.py  preview_style_sets.py  reanalyze_underbaked_templates.py  render_trace_baseline.py  rollback_whisper_only_migration.py  run_grader_calibration.py  run_template_text_eval.sh  seed_demo_music_track.py  seed_dimples_passport_brazil.py  seed_how_do_you_enjoy_your_life.py  seed_rule_of_thirds.py  seed_smart_sfx.py
(+1715 files in other folders)
