[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "openai>=1.30",
    "google-genai>=1.0",
    "google-cloud-storage>=2.16",
    "scenedetect[opencv]>=0.6",
    "opencv-python-headless>=4.9",
    "cryptography>=42",
    "slowapi>=0.1.9",
    "email-validator>=2.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "structlog>=24",
    "Pillow>=10.0",
    "pillow-heif>=0.16",
    "yt-dlp>=2024.12",
]

[project.optional-dependencies]
local-whisper = [
    "faster-whisper>=1.0",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "pytest-xdist>=3",
    "pytest-timeout>=2.3",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "ruff>=0.4",
    "mypy>=1.10",
    "anthropic>=0.40",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"app/pipeline/captions.py" = ["E501"]  # ASS subtitle format strings must stay on one line
"scripts/build_eval_dashboard.py" = ["E501"]  # large inline CSS/HTML/JS string literals

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30
